# imanes-nfc

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  udo dnf upgrade --refresh
src/: main.rs
src/db/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
templates/: 404.html  admin.html  login.html  setup.html
